--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -5,7 +5,7 @@ author = {S. Akkar and J.J. Bommer},
 title = {Empirical Equations for the Prediction of PGA, PGV, and Spectral Accelerations in Europe, the Mediterranean Region, and the Middle East},
 journal = {Seismol. Res. Lett.},
 year = {2010},
-number = {122},
+volume = {122},
 pages = {195–2068},
 doi = {10.1785/gssrl.81.2.195},
 url = {}
@@ -16,7 +16,7 @@ author = {S. Akkar and M.A. Sandikkaya and J.J. Bommer},
 title = {Empirical Ground-Motion Models for Point- and Extended- Source Crustal Earthquake Scenarios in Europe and the Middle East},
 journal = {Bull. Earthquake Eng.},
 year = {2014},
-number = {12},
+volume = {12},
 pages = {359 - 387},
 doi = {}
 }
@@ -26,7 +26,7 @@ author = {Y. Behr and G. Cua and J. Clinton and T. Heaton},
 title = {Evaluation of Real-Time Performance of the Virtual Seismologist Earthquake Early Warning Algorithm in Switzerland and California},
 journal = {AGU Fall Meeting Abstracts},
 year = {2012},
-number = {},
+volume = {},
 pages = {S53B - 2496},
 url = {https://ui.adsabs.harvard.edu/abs/2012AGUFM.S53B2496B/abstract}
 }
@@ -36,7 +36,7 @@ author = {Y. Behr and J.F. Clinton and P. Kästli and C. Cauzzi and R. Racine an
 title = {Anatomy of an Earthquake Early Warning (EEW) Alert: Predicting Time Delays for an End‐to‐End EEW System},
 journal = {Seismol. Res. Lett.},
 year = {2015},
-number = {3},
+volume = {3},
 pages = {830 – 840},
 doi = {10.1785/0220140179}
 }
@@ -46,7 +46,7 @@ author = {Y. Behr and J.F. Clinton and C. Cauzzi and E. Hauksson and K. Jónsdó
 title = {The Virtual Seismologist in SeisComP: A New Implementation Strategy for Earthquake Early Warning Algorithms},
 journal = {Seismol. Res. Lett.},
 year = {2016},
-number = {2A},
+volume = {2A},
 pages = {363 – 373},
 doi = {10.1785/0220150235}
 }
@@ -56,7 +56,7 @@ author = {D. Bindi and B. Petrovic and S. Karapetrou and M. Manakou and T. Boxbe
 title = {Seismic response of an 8-story RC-building from ambient vibration analysis},
 journal = {Bull. Earthquake Eng.},
 year = {2015},
-number = {},
+volume = {},
 pages = {},
 doi = {10.1007/s10518-014-9713-y}
 }
@@ -66,7 +66,7 @@ author = {M.K. Bolton and D.A. Storchak and J. Harris},
 title = {Updating default depth in the ISC bulletin},
 journal = {Phys. Earth Planet. Int.},
 year = {2006},
-issue = {1},
+volume = {1},
 pages = {27 - 45},
 doi = {10.1016/j.pepi.2006.03.004},
 }
@@ -76,7 +76,7 @@ author = {J.J. Bommer and S. Akkar and S. Drouet},
 title = {Extending ground-motion prediction equations for spectral accelerations to higher response frequencies},
 journal = {Bull. Earthquake Eng.},
 year = {2012},
-number = {10},
+volume = {10},
 pages = {379 - 399},
 doi = {10.1007/s10518-011-9304-0},
 }
@@ -86,7 +86,7 @@ author = {I. Bondár and K.L. McLaughlin and H. Israelsson},
 title = {Improved event location uncertainty estimates},
 journal = {Science Applications International Corp.},
 year = {2008},
-number = {},
+volume = {},
 pages = {},
 url = {https://apps.dtic.mil/sti/pdfs/ADA490968.pdf},
 }
@@ -96,7 +96,7 @@ author = {I. Bondár and K.L. McLaughlin},
 title = {A new ground truth data set for seismic studies},
 journal = {Seismol. Res. Lett.},
 year = {2009},
-number = {3},
+volume = {3},
 pages = {465 - 472},
 doi = {10.1785/gssrl.80.3.465},
 }
@@ -106,19 +106,19 @@ author = {I. Bondár and K.L. McLaughlin},
 title = {Seismic location bias and uncertainty in the presence of correlated and non-Gaussian travel-time errors},
 journal = {Bull. Seismol. Soc. Am.},
 year = {2009},
-number = {1},
+volume = {1},
 pages = {172 – 193},
 doi = {10.1785/0120080922},
 }
 
 @Article{bondár-2011,
 author = {I. Bondár and D. Storchak},
-title = {Improved location procedures at the International Seismological Centre},
+title = {{Improved location procedures at the International Seismological Centre}},
 journal = {Geophys. J. Int.},
 year = {2011},
-issue = {3},
+volume = {3},
 pages = {1220 – 1244},
-doi = {10.1111/j.1365-246X.2011.05107.x},
+doi = {10.1111/j.1365-246X.2011.05107.x}
 }
 
 @Article{bondár-2015,
@@ -126,17 +126,17 @@ author = {I. Bondár and E. Robert Engdahl and A. Villaseñor and J. Harris and
 title = {ISC-GEM: Global Instrumental Earthquake Catalogue (1900–2009), II. Location and seismicity patterns},
 journal = {Phys. Earth Planet. Int.},
 year = {2015},
-issue = {},
+volume = {},
 pages = {2 - 13},
 doi = {10.1016/j.pepi.2014.06.002},
 }
 
 @Article{bondár-2018,
 author = {I. Bondár and P. Mónus and C. Czanik and M. Kiszely and Z. Gráczer and Z. Wéber and the AlpArrayWorking Group},
-title = {Relocation of Seismicity in the Pannonian Basin Using a Global 3D Velocity Model},
+title = {{Relocation of Seismicity in the Pannonian Basin Using a Global 3D Velocity Model}},
 journal = {Seismol. Res. Lett.},
 year = {2018},
-issue = {6},
+volume = {6},
 pages = {2284 – 2293},
 doi = {10.1785/0220180143},
 }
@@ -146,7 +146,7 @@ author = {P. Bormann and J. Saul},
 title = {The New IASPEI Standard Broadband Magnitude mB},
 journal = {Seismol. Res. Lett.},
 year = {2008},
-number = {5},
+volume = {5},
 pages = {698 - 705},
 doi = {10.1785/gssrl.79.5.698},
 }
@@ -156,7 +156,7 @@ author = {S.R. Bratt and T.C. Bache},
 title = {Locating events with a sparse network of regional arrays},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1988},
-number = {2},
+volume = {2},
 pages = {780 - 798},
 doi = {10.1785/BSSA0780020780},
 }
@@ -166,7 +166,7 @@ author = {D.J. Brown and C.N. Katz and R. Le BRAS and M.P. Flanagan and J. Wang 
 title = {Infrasonic Signal Detection and Source Location at the Prototype International Data Centre},
 journal = {Pure appl. geophys.},
 year = {2002},
-number = {159},
+volume = {159},
 pages = {1081 – 1125},
 doi = {10.1007/s00024-002-8674-2},
 url = {}
@@ -177,7 +177,7 @@ author = {R. Buland and C.H. Chapman},
 title = {The computation of seismic travel times},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1983},
-number = {5},
+volume = {5},
 pages = {1271 – 1302},
 doi = {10.1785/BSSA0730051271},
 url = {}
@@ -188,7 +188,7 @@ author = {Y. Cansi},
 title = {An automatic seismic event processing for detection and location: The PMCC method},
 journal = {Geophys. Res. Lett.},
 year = {1995},
-number = {9},
+volume = {9},
 pages = {1021 - 1024},
 doi = {10.1029/95GL00468},
 url = {}
@@ -199,7 +199,7 @@ author = {A. Caruso and S. Colombelli and L. Elia and M. Picozzi and A. Zollo},
 title = {An on-site alert level early warning system for Italy},
 journal = {J. Geophys. Res. Solid Earth},
 year = {2017},
-number = {122},
+volume = {122},
 pages = {2106-2118},
 doi = {10.1002/2016JB013403},
 url = {}
@@ -211,7 +211,7 @@ title = {Updated predictive equations for broadband (0.01–10 s) horizontal res
 spectra and peak ground motions, based on a global dataset of digital acceleration records},
 journal = {Bull. Earthquake Eng.},
 year = {2015},
-number = {13},
+volume = {13},
 pages = {1587–1612},
 doi = {10.1007/s10518-014-9685-y}
 }
@@ -221,7 +221,7 @@ author = {G. Cua},
 title = {Creating the Virtual Seismologist: developments in ground motion characterization and seismic early warning},
 journal = {PhD thesis, California Institute of Technology, Pasadena, California},
 year = {2005},
-number = {},
+volume = {},
 pages = {},
 doi = {10.7907/M926-J956}
 }
@@ -231,7 +231,6 @@ author = {G. Cua and T. Heaton},
 title = {The Virtual Seismologist (VS) Method: a Bayesian Approach to Earthquake Early Warning. In: Gasparini P., Manfredi G., Zschau J. (eds) Earthquake Early Warning Systems},
 journal = {Springer, Berlin, Heidelberg},
 year = {2007},
-number = {},
 pages = {97 - 132},
 doi = {10.1007/978-3-540-72241-0_7}
 }
@@ -241,7 +240,7 @@ author = {G. Cua and M. Fischer and T. Heaton and S. Wiemer},
 title = {Real-time performance of the Virtual Seismologist earthquake early warning algorithm in southern California},
 journal = {Seismol. Res. Lett.},
 year = {2009},
-number = {5},
+volume = {5},
 pages = {740 – 747},
 doi = {10.1785/gssrl.80.5.740}
 }
@@ -251,7 +250,7 @@ author = {B. Dost and T. van Eck and H. Haak},
 title = {Scaling of peak ground acceleration and peak ground velocity recorded in the Netherlands},
 journal = {Bull. Earthquake Eng.},
 year = {2004},
-number = {45},
+volume = {45},
 pages = {153 - 168},
 doi = {}
 }
@@ -261,7 +260,7 @@ author = {L. Dietz},
 title = {Notes on configuring BINDER_EW: Earthworm’s phase associator},
 journal = {Geophys. J. Int.},
 year = {2002},
-issue = {},
+volume = {},
 pages = {},
 url = {http://folkworm.ceri.memphis.edu/ew-doc/ovr/binder_setup.html}
 }
@@ -271,7 +270,7 @@ author = {A.M. Dziewonski and F. Gilbert},
 title = {The effect of small, aspherical perturbations on travel times and a re-examination of the correction for ellipticity},
 journal = {Geophys. J. Int.},
 year = {1976},
-issue = {1},
+volume = {1},
 pages = {7 - 17},
 doi = {10.1111/j.1365-246X.1976.tb00271.x}
 }
@@ -281,7 +280,7 @@ author = {E.R. Engdahl and R. van der Hilst and R. Buland},
 title = {Global teleseismic earthquake relocation with improved travel times and procedures for depth determination},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1998},
-issue = {3},
+volume = {3},
 pages = {722 – 743},
 doi = {10.1785/BSSA0880030722}
 }
@@ -291,7 +290,7 @@ author = {J.F. Evernden},
 title = {Precision of epicenters obtained by small numbers of world-wide stations},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1969},
-issue = {3},
+volume = {3},
 pages = {1365 – 1398},
 doi = {10.1785/BSSA0590031365}
 }
@@ -301,7 +300,7 @@ author = {E.A. Flinn},
 title = {Confidence regions and error determinations for seismic event location},
 journal = {Rev. Geophys.},
 year = {1965},
-number = {1},
+volume = {1},
 pages = {157 - 185},
 doi = {10.1029/RG003i001p00157}
 }
@@ -311,8 +310,29 @@ author = {W. Hanka and J. Saul and B. Weber and J. Becker and P. Harjadi and Fau
 title = {Real-time earthquake monitoring for tsunami warning in the Indian Ocean and beyond},
 journal = {NHESS},
 year = {2010},
-number = {10},
+volume = {10},
 pages = {2611 - 2622},
+doi = {10.5194/nhess-10-2611-2010}
+}
+
+@Article{hiemer-2012,
+author = {S. Hiemer and D. Roessler},
+title = {{Monitoring the West Bohemian earthquake swarm in 2008/2009 by a temporary small-aperture seismic array.}},
+journal = {J. Seismol.},
+year = {2012},
+volume = {16},
+pages = {169-182},
+doi = {10.1007/s10950-011-9256-5}
+}
+
+@Article{hutton-1987,
+author = {L.K. Hutton and D.M. Boore},
+title = {{The ML scale in southern California}},
+journal = {Bull. Seismol. Soc. Am,},
+year = {1987},
+volume = {77},
+number = {6},
+pages = {2074–2094},
 doi = {10.5194/nhess-10-2611-2010}
 }
 
@@ -329,7 +349,7 @@ author = {T.H. Jordan and K.A. Sverdrup},
 title = {Teleseismic location techniques and their application to earthquake clusters in the South-Central Pacific},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1981},
-number = {4},
+volume = {4},
 pages = {1105 – 1130},
 doi = {10.1785/BSSA0710041105}
 }
@@ -339,7 +359,7 @@ author = {H. Kanamori and L. Rivera},
 title = {Source inversion of Wphase: speeding up seismic tsunami warning},
 journal = {Geophys. J. Int.},
 year = {2008},
-issue = {1},
+volume = {1},
 pages = {222 - 238},
 doi = {10.1111/j.1365-246X.2008.03887.x},
 }
@@ -349,7 +369,7 @@ author = {B. Kennett and E.R. Engdahl},
 title = {Travel times for global earthquake location and phase identification},
 journal = {Geophys. J. Int.},
 year = {1991},
-issue = {2},
+volume = {2},
 pages = {429 - 465},
 doi = {10.1111/j.1365-246X.1991.tb06724.x},
 }
@@ -359,7 +379,7 @@ author = {B. Kennett and O. Gudmundsson},
 title = {Ellipticity corrections for seismic phases},
 journal = {Geophys. J. Int.},
 year = {1996},
-issue = {1},
+volume = {1},
 pages = {40 - 48},
 doi = {10.1111/j.1365-246X.1996.tb01533.x},
 }
@@ -369,9 +389,10 @@ author = {F.W. Klein},
 title = {User’s guide to HYPOINVERSE-2000, a Fortran program to solve for earthquake locations and magnitudes},
 journal = {US Geological Survey},
 year = {2002},
-number = {2002-171},
+volume = {2002-171},
 pages = {},
 doi = {10.3133/ofr02171},
+url = {https://www.usgs.gov/node/279394}
 }
 
 @Article{knopoff-1970,
@@ -379,7 +400,7 @@ author = {L. Knopoff and M.J. Randall},
 title = {The compensated linear‐vector dipole: A possible mechanism for deep earthquakes},
 journal = {J. Geophys. Res.},
 year = {1970},
-issue = {26},
+volume = {26},
 pages = {4957 - 4963},
 doi = {10.1029/JB075i026p04957},
 }
@@ -389,7 +410,7 @@ author = {M. Kowsari and T. Sonnemann and B. Halldorsson and B. Hrafnkelsson and
 title = {Bayesian inference of empirical ground motion models to pseudo-spectral accelerations of south Iceland seismic zone earthquakes based on informative priors},
 journal = {Solid Dynamics and Earthquake Engineering},
 year = {2020},
-number = {13},
+volume = {13},
 pages = {},
 doi = {10.1016/j.soildyn.2020.106075},
 url = {}
@@ -414,7 +435,7 @@ author = {S.E. Minson and D.S. Dreger},
 title = {Stable inversions for complete moment tensors},
 journal = {Geophys. J. Int.},
 year = {2008},
-issue = {2},
+volume = {2},
 pages = {585 – 592},
 doi = {10.1111/j.1365-246X.2008.03797.x},
 }
@@ -424,7 +445,7 @@ author = {S.C. Myers and M.L. Begnaud and S. Ballard and M.E. Pasyanos and W.S. 
 title = {A crust and upper mantle model of Eurasia and North Africa for Pn travel time calculation},
 journal = {Bull. Seismol. Soc. Am. },
 year = {2010},
-issue = {2},
+volume = {2},
 pages = {640 – 656},
 doi = {10.1785/0120090198},
 }
@@ -434,7 +455,7 @@ author = {Natural Resources Canada (NRCAN)},
 title = {Earthquakes Canada},
 journal = {},
 year = {},
-issue = {},
+volume = {},
 pages = {},
 url = {https://earthquakescanada.nrcan.gc.ca/index-en.php},
 }
@@ -444,7 +465,7 @@ author = {O.W. Nuttli},
 title = {Seismic wave attenuation and magnitude relations for eastern North America},
 journal = {J. Geophys. Res.},
 year = {1973},
-issue = {5},
+volume = {5},
 pages = {876 - 885},
 doi = {10.1029/JB078i005p00876},
 }
@@ -454,7 +475,7 @@ author = {C. Paige and M. Saunders},
 title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least Squares},
 journal = {ACM Transactions on Mathematical Software},
 year = {1982},
-issue = {1},
+volume = {1},
 pages = {43 - 71},
 doi = {10.1145/355984.355989},
 }
@@ -464,7 +485,7 @@ author = {G.L. Pavlis and F. Vernon and D. Harvey and D. Quinlan},
 title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least Squares},
 journal = {ACM Transactions on Mathematical Software},
 year = {1982},
-issue = {1},
+volume = {1},
 pages = {43 - 71},
 doi = {10.1145/355984.355989},
 }
@@ -474,7 +495,7 @@ author = {G.G. Pétursson and K.S. Vogfjörð},
 title = {Attenuation relations for near- and far-field peak ground motion (PGV, PGA) and new magnitude estimates for large earthquakes in SW-Iceland},
 journal = {},
 year = {2010},
-number = {},
+volume = {},
 pages = {},
 doi = {},
 url = {https://www.vedur.is/media/vedurstofan/utgafa/skyrslur/2009/VI_2009_012.pdf}
@@ -485,28 +506,28 @@ author = {C.F. Richter},
 title = {An instrumental earthquake magnitude scale},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1935},
-number = {1},
+volume = {1},
 pages = {1 - 32},
 doi = {10.1785/BSSA0250010001}
 }
 
- @Article{ristau-2016,
- author = {J. Ristau and D. Harte and J. Salichon},
- title = {{A Revised Local Magnitude (ML) Scale for New Zealand Earthquakes}},
- journal = {Bull. Seismol. Soc. Am.},
- year = {2016},
- volume = {106},
- number = {2},
- pages = {},
- doi = {10.1785/0120150293}
- }
+@Article{ristau-2016,
+author = {J. Ristau and D. Harte and J. Salichon},
+title = {{A Revised Local Magnitude (ML) Scale for New Zealand Earthquakes}},
+journal = {Bull. Seismol. Soc. Am.},
+year = {2016},
+volume = {106},
+number = {2},
+pages = {},
+doi = {10.1785/0120150293}
+}
 
 @Article{roessler-2010,
 author = {D. Roessler and F. Krueger and M. Ohrnberger and L. Ehlert},
 title = {Rapid characterisation of large earthquakes by multiple seismic broadband arrays},
 journal = {NHESS},
 year = {2010},
-number = {4},
+volume = {4},
 pages = {923 - 932},
 doi = {10.5194/nhess-10-923-2010}
 }
@@ -516,8 +537,6 @@ author = {D. Roessler and B. Weber and E. Ellguth and J. Spazier},
 title = {Evaluierung der Qualität und Geschwindigkeit von Erdbebendetektionen in SeisComP3},
 journal = {AG Seismologie meeting},
 year = {2017},
-number = {},
-issue = {},
 doi = {10.4172/2157-7463.1000254},
 }
 
@@ -526,8 +545,7 @@ author = {D. Roessler and B. Weber and E. Ellguth and J. Spazier},
 title = {EVALUATION OF EARTHQUAKE DETECTION PERFORMANCE IN TERMS OF QUALITY AND SPEED IN SeisComP3 USING THE NEW MODULES QCEVAL, NPEVAL AND SCEVAL},
 journal = {AGU Fall Meeting},
 year = {2017},
-number = {6},
-issue = {6},
+volume = {6},
 url = {https://agu.confex.com/agu/fm17/meetingapp.cgi/Paper/228310},
 }
 
@@ -551,17 +569,17 @@ author = {S. Rost and C. Thomas},
 title = {Array seismology: methods and applications},
 journal = {Rev. Geophys.},
 year = {2002},
-number = {3},
+volume = {3},
 pages = {2 - 1},
 doi = {10.1029/2000RG000100}
 }
 
 @Article{sambridge-1999,
 author = {M. Sambridge},
-title = {Geophysical inversion with a neighbourhood algorithm. I. Searching the parameter space},
+title = {{Geophysical inversion with a neighbourhood algorithm. I. Searching the parameter space}},
 journal = {Geophys. J. Int.},
 year = {1999},
-number = {2},
+volume = {2},
 pages = {479 – 494},
 doi = {10.1046/j.1365-246X.1999.00876.x}
 }
@@ -571,7 +589,8 @@ author = {M. Sambridge and B.L.N. Kennett},
 title = {Seismic event location: non-linear inversion using a neighbourhood algorithm},
 journal = {Pure and Applied Geophysics},
 year = {2001},
-number = {},
+volume = {151},
+number = {1},
 pages = {241 – 257},
 doi = {10.1007/PL00001158}
 }
@@ -598,39 +617,68 @@ author = {G.P. Silver and T.H. Jordan},
 title = {Optimal estimation of the scalar seismic moment},
 journal = {Geophys. J. Int.},
 year = {1982},
-issue = {3},
+volume = {3},
 pages = {755 – 787},
 doi = {10.1111/j.1365-246X.1982.tb05982.x}
 }
 
+@Article{stange-2006,
+author = {S. Stange},
+title = {{ML determination for local and regional events using a sparse network in Southwestern Germany}},
+journal = {J. Seismol.},
+year = {2006},
+volume = {10},
+pages = {247 – 257},
+doi = {10.1007/s10950-006-9010-6}
+}
+
+
+@Article{tsuboi-1995,
+author = {S. Tsuboi and K. Abe and K. Takano and Y. Yamanaka},
+title = {{Rapid determination of Mw from broadband P waveforms}},
+journal = {Bull. Seismol. Soc. Am.},
+year = {1995},
+volume = {85},
+number = {2},
+doi = {10.1785/BSSA0850020606}
+}
+
 @Article{tramelli-2015,
 author = {A. Tramelli and R. Peluso and M. Orazi and C. Troise and G. De Natale},
-title = {A FORTRAN Code for the Sensitivity Estimate of a Seismic Network: An Application to Campi Flegrei},
+title = {{A FORTRAN Code for the Sensitivity Estimate of a Seismic Network: An Application to Campi Flegrei}},
 journal = {Journal of Petroleum & Environmental Biotechnology},
 year = {2015},
+volume = {6},
 number = {6},
-issue = {6},
-doi = {10.4172/2157-7463.1000254},
+doi = {10.4172/2157-7463.1000254}
 }
 
 @Article{weber-2019,
 author = {B. Weber and I. Bondár and D. Roessler and J. Becker},
-title = {SeisComP3 iLoc Integration Applied to Array Processing},
+title = {{SeisComP3 iLoc Integration Applied to Array Processing}},
 journal = {SnT conference},
 year = {2019},
-number = {},
-issue = {},
 url = {https://events.ctbto.org/sites/default/files/2020-05/20190614-2019%20Book%20Of%20Abstracts%20Web%20Version%20with%20front%20cover%20-%20edited.pdf},
+}
+
+@Article{whitmore-2002,
+author = {P.M. Whitmore and S. Tsuboi and B. Hirshorn and T.J. Sokolowski},
+title = {{Magnitude dependent correction for Mwp}},
+journal = {Science of Tsunami Hazards},
+year = {2002},
+volume = {20},
+number = {4},
+pages = {}
 }
 
 @Article{young-1996,
 author = {J.B. Young and B.W. Presgrave and H. Aichele and D.A. Wiens and E.A. Flinn},
-title = {The Flinn-Engdahl Regionalisation Scheme: The 1995 revision},
+title = {{The Flinn-Engdahl Regionalisation Scheme: The 1995 revision}},
 journal = {Phys. Earth Planet. Int.},
 year = {1996},
-number = {},
+volume = {96},
 pages = {223 - 297},
-doi = {10.1016/0031-9201(96)03141-X},
+doi = {10.1016/0031-9201(96)03141-X}
 }
 
 #############################
@@ -818,7 +866,7 @@ doi = {10.1016/0031-9201(96)03141-X},
 }
 
 @Misc{gempa,
-  Title                    = {{gempa}},
+  Title                    = {{gempa GmbH}},
   HowPublished             = {The SeisComP development and maintenance company},
   Url                      = {https://www.gempa.de/},
 }
