[documentation] Add more references, update style guide

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -161,6 +161,13 @@ pages = {780 - 798},
 doi = {10.1785/BSSA0780020780},
 }
 
+@Article{bratt-1991,
+author = {S.R. Bratt and W. Nagy},
+title = {The LocSAT Program},
+journal = {Science Applications International Corporation (SAIC), San Diego},
+year = {1991}
+}
+
 @Article{brown-2002,
 author = {D.J. Brown and C.N. Katz and R. Le BRAS and M.P. Flanagan and J. Wang and A.K. Gault},
 title = {Infrasonic Signal Detection and Source Location at the Prototype International Data Centre},
@@ -386,7 +393,7 @@ doi = {10.1111/j.1365-246X.1996.tb01533.x},
 
 @Article{klein-2002,
 author = {F.W. Klein},
-title = {User’s guide to HYPOINVERSE-2000, a Fortran program to solve for earthquake locations and magnitudes},
+title = {{User’s guide to HYPOINVERSE-2000, a Fortran program to solve for earthquake locations and magnitudes}},
 journal = {US Geological Survey},
 year = {2002},
 volume = {2002-171},
@@ -428,6 +435,8 @@ author = {W.H. Lee and J.C. Lahr},
 title = {Hypo71 (revised): a computer program for determining local earthquake hypocentral parameters, magnitude, and first motion pattern of local earthquakes},
 journal = {US Geol. Survey Open-file Report 75-311},
 year = {1975},
+url  = {https://pubs.er.usgs.gov/publication/ofr75311},
+doi  = {10.3133/ofr75311 }
 }
 
 @Article{minson-2008,
@@ -448,16 +457,6 @@ year = {2010},
 volume = {2},
 pages = {640 – 656},
 doi = {10.1785/0120090198},
-}
-
-@Article{natural-resources-canada,
-author = {Natural Resources Canada (NRCAN)},
-title = {Earthquakes Canada},
-journal = {},
-year = {},
-volume = {},
-pages = {},
-url = {https://earthquakescanada.nrcan.gc.ca/index-en.php},
 }
 
 @Article{nuttli-1973,
@@ -955,6 +954,11 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://seiscode.iris.washington.edu/projects/iloc},
 }
 
+@Misc{ipgp,
+Title = {{IPGP}},
+url = {http://www.ipgp.fr}
+}
+
 @Misc{jw2caps,
   Title                    = {{jw2caps}},
   HowPublished             = {gempa plugin},
@@ -1112,9 +1116,21 @@ doi = {10.1016/0031-9201(96)03141-X}
 }
 
 @Misc{nonlinloc,
+  Author                   = {A. Lomax},
+  Title                    = {{The NonLinLoc Software Guide}},
+  HowPublished             = {Manual},
+  Url                      = {http://alomax.free.fr/nlloc/}
+}
+
+@Misc{nonlinloc-sc,
   Title                    = {{NonLinLoc}},
   HowPublished             = {SeisComP locator},
-  Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_nonlinloc.html},
+  Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_nonlinloc.html}
+}
+
+@Misc{nrcan,
+  Title = {{Natural Resources Canada (NRCAN), Earthquakes Canada}},
+  Url = {https://earthquakescanada.nrcan.gc.ca/index-en.php},
 }
 
 @Misc{openquake,
@@ -1126,13 +1142,18 @@ doi = {10.1016/0031-9201(96)03141-X}
 @Misc{openquake-models,
   Title                    = {{OpenQuake}},
   HowPublished             = {hazardlib documentation},
-  Url                      = {https://docs.openquake.org/oq-hazardlib/0.12/gsim/index.html},
+  Url                      = {https://docs.openquake.org/oq-hazardlib/0.12/gsim/index.html}
 }
 
 @Misc{orb2caps,
   Title                    = {{orb2caps}},
   HowPublished             = {gempa plugin},
-  Url                      = {https://docs.gempa.de/caps/current/apps/orb2caps.html#orb2caps},
+  Url                      = {https://docs.gempa.de/caps/current/apps/orb2caps.html#orb2caps}
+}
+
+@Misc{ovsm,
+  Title = {{OVSM, Interreg Caraibes}},
+  Url = {https://www.interreg-caraibes.com}
 }
 
 @Misc{playback_picks,
@@ -1519,16 +1540,24 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/seedlink.html},
 }
 
-@Misc{sed,
-  Title                    = {{SED}},
+@Misc{sed-license,
+  Title                    = {{SED licnse}},
   HowPublished             = {Public License for SeisComP Contributions},
   Url                      = {http://www.seismo.ethz.ch/static/SeisComP_contrib/license.txt},
 }
 
-@Misc{SeisComP,
-  Title                    = {{SeisComP}},
-  HowPublished             = {gempa module package},
+@Misc{seiscomp-doc,
+  Title                    = {{SeisComP documentation}},
+  HowPublished             = {start page},
   Url                      = {https://docs.gempa.de/seiscomp/current/index.html},
+}
+
+@Misc{seiscomp,
+  Title                    = {{The SeisComP seismological software package. GFZ Data Services.}},
+  Author                   = {{Helmholtz-Centre Potsdam - GFZ German Research Centre for Geosciences and gempa GmbH}},
+  Year                     = {2008},
+  Doi                      = {10.5880/GFZ.2.4.2020.003},
+  Url                      = {https://www.seiscomp.de}
 }
 
 @Misc{services,
