[documentation] Update reference, glossary

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -141,6 +141,16 @@ pages = {2284 – 2293},
 doi = {10.1785/0220180143},
 }
 
+@Article{bormann-2005,
+author = {P. Bormann and K. Wylegalla},
+title = {Quick estimator of the size of great earthquakes},
+journal = {EOS},
+year = {2005},
+volume = {86},
+number = {46},
+pages = {464}
+}
+
 @Article{bormann-2008,
 author = {P. Bormann and J. Saul},
 title = {The New IASPEI Standard Broadband Magnitude mB},
@@ -151,26 +161,39 @@ pages = {698 - 705},
 doi = {10.1785/gssrl.79.5.698},
 }
 
+@Article{bormann-2009,
+author = {P. Bormann and J. Saul},
+title = {{A Fast, Non-saturating Magnitude Estimator for Great Earthquakes}},
+journal = {Seismol. Res. Lett.},
+year = {2009},
+volume = {80},
+number = {5},
+pages = {808 - 816},
+doi = {10.1785/gssrl.80.5.808}
+}
+
 @Article{bratt-1988,
 author = {S.R. Bratt and T.C. Bache},
 title = {Locating events with a sparse network of regional arrays},
 journal = {Bull. Seismol. Soc. Am.},
 year = {1988},
-volume = {2},
+volume = {78},
+number = {2},
 pages = {780 - 798},
 doi = {10.1785/BSSA0780020780},
+url = {https://pubs.geoscienceworld.org/ssa/bssa/article-pdf/78/2/780/5334120/bssa0780020780.pdf},
 }
 
 @Article{bratt-1991,
 author = {S.R. Bratt and W. Nagy},
-title = {The LocSAT Program},
+title = {{The LocSAT Program}},
 journal = {Science Applications International Corporation (SAIC), San Diego},
 year = {1991}
 }
 
 @Article{brown-2002,
 author = {D.J. Brown and C.N. Katz and R. Le BRAS and M.P. Flanagan and J. Wang and A.K. Gault},
-title = {Infrasonic Signal Detection and Source Location at the Prototype International Data Centre},
+title = {{Infrasonic Signal Detection and Source Location at the Prototype International Data Centre}},
 journal = {Pure appl. geophys.},
 year = {2002},
 volume = {159},
@@ -192,7 +215,7 @@ url = {}
 
 @Article{cansi-1995,
 author = {Y. Cansi},
-title = {An automatic seismic event processing for detection and location: The PMCC method},
+title = {{An automatic seismic event processing for detection and location: The PMCC method}},
 journal = {Geophys. Res. Lett.},
 year = {1995},
 volume = {9},
@@ -203,7 +226,7 @@ url = {}
 
 @Article{caruso-2017,
 author = {A. Caruso and S. Colombelli and L. Elia and M. Picozzi and A. Zollo},
-title = {An on-site alert level early warning system for Italy},
+title = {{An on-site alert level early warning system for Italy}},
 journal = {J. Geophys. Res. Solid Earth},
 year = {2017},
 volume = {122},
@@ -225,7 +248,7 @@ doi = {10.1007/s10518-014-9685-y}
 
 @Article{cua-2005,
 author = {G. Cua},
-title = {Creating the Virtual Seismologist: developments in ground motion characterization and seismic early warning},
+title = {{Creating the Virtual Seismologist: developments in ground motion characterization and seismic early warning}},
 journal = {PhD thesis, California Institute of Technology, Pasadena, California},
 year = {2005},
 volume = {},
@@ -235,7 +258,7 @@ doi = {10.7907/M926-J956}
 
 @Article{cua-2007,
 author = {G. Cua and T. Heaton},
-title = {The Virtual Seismologist (VS) Method: a Bayesian Approach to Earthquake Early Warning. In: Gasparini P., Manfredi G., Zschau J. (eds) Earthquake Early Warning Systems},
+title = {{The Virtual Seismologist (VS) Method: a Bayesian Approach to Earthquake Early Warning. In: Gasparini P., Manfredi G., Zschau J. (eds) Earthquake Early Warning Systems}},
 journal = {Springer, Berlin, Heidelberg},
 year = {2007},
 pages = {97 - 132},
@@ -244,7 +267,7 @@ doi = {10.1007/978-3-540-72241-0_7}
 
 @Article{cua-2009,
 author = {G. Cua and M. Fischer and T. Heaton and S. Wiemer},
-title = {Real-time performance of the Virtual Seismologist earthquake early warning algorithm in southern California},
+title = {{Real-time performance of the Virtual Seismologist earthquake early warning algorithm in southern California}},
 journal = {Seismol. Res. Lett.},
 year = {2009},
 volume = {5},
@@ -254,7 +277,7 @@ doi = {10.1785/gssrl.80.5.740}
 
 @Article{dost-2004,
 author = {B. Dost and T. van Eck and H. Haak},
-title = {Scaling of peak ground acceleration and peak ground velocity recorded in the Netherlands},
+title = {{Scaling of peak ground acceleration and peak ground velocity recorded in the Netherlands}},
 journal = {Bull. Earthquake Eng.},
 year = {2004},
 volume = {45},
@@ -264,7 +287,7 @@ doi = {}
 
 @Article{dietz-2002,
 author = {L. Dietz},
-title = {Notes on configuring BINDER_EW: Earthworm’s phase associator},
+title = {{Notes on configuring BINDER_EW: Earthworm’s phase associator}},
 journal = {Geophys. J. Int.},
 year = {2002},
 volume = {},
@@ -310,6 +333,18 @@ year = {1965},
 volume = {1},
 pages = {157 - 185},
 doi = {10.1029/RG003i001p00157}
+}
+
+@Article{gutenberg-1956,
+author = {B. Gutenberg and C.F. Richter},
+title = {{Magnitude and Energy of Earthquakes}},
+journal = {Annals of Geophysics},
+year = {1956},
+volume = {9},
+number = {1},
+pages = {1 - 15},
+url = {https://resolver.caltech.edu/CaltechAUTHORS:20140130-105324849},
+doi = {10.4401/ag-5590}
 }
 
 @Article{hanka-2010,
@@ -369,6 +404,17 @@ year = {2008},
 volume = {1},
 pages = {222 - 238},
 doi = {10.1111/j.1365-246X.2008.03887.x},
+}
+
+@Article{katsumata-1996,
+author = {A. Katsumata},
+title = {{Comparison of Magnitudes Estimated by the Japan Meteorological Agency
+with Moment Magnitudes for Intermediate and Deep Earthquakes}},
+journal = {Bull. Seism. Soc.},
+year = {1996},
+volume = {86},
+number = {3},
+pages = {832 - 842}
 }
 
 @Article{kennett-1991,
@@ -1544,6 +1590,13 @@ url = {http://www.ipgp.fr}
   Title                    = {{sczip}},
   HowPublished             = {SeisComP module},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/sczip.html},
+}
+
+@Misc{seed-2012,
+  Title                    = {{SEED Reference Manual}},
+  Year                     = {2012},
+  HowPublished             = {USGS},
+  Url                      = {http://www.fdsn.org/pdf/SEEDManual_V2.4.pdf}
 }
 
 @Misc{seedlink,
