[documentation] Update reference list

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -900,6 +900,12 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_gui.html},
 }
 
+@Misc{hann-window,
+  Title                    = {{Hann window}},
+  HowPublished             = {Wikipdia},
+  Url                      = {https://en.wikipedia.org/wiki/Hann_function},
+}
+
 @Misc{hypo71,
   Title                    = {{Hypo71}},
   HowPublished             = {SeisComP locator},
@@ -1140,9 +1146,15 @@ url = {http://www.ipgp.fr}
 }
 
 @Misc{openquake-models,
-  Title                    = {{OpenQuake}},
+  Title                    = {{OpenQuake hazard library}},
   HowPublished             = {hazardlib documentation},
   Url                      = {https://docs.openquake.org/oq-hazardlib/0.12/gsim/index.html}
+}
+
+@Misc{openquake-github,
+  Title                    = {{OpenQuake source code}},
+  HowPublished             = {GitHub},
+  Url                      = {https://github.com/gem/oq-engine}
 }
 
 @Misc{orb2caps,
@@ -1684,6 +1696,12 @@ url = {http://www.ipgp.fr}
   Title                    = {{Virtual Seismologist}},
   HowPublished             = {Virtual Seismologist},
   Url                      = {http://www.seismo.ethz.ch/en/research-and-teaching/products-software/EEW/Virtual-Seismologist/},
+}
+
+@Misc{usgs-vs30,
+  Title                    = {{Vs30}},
+  HowPublished             = {USGS},
+  Url                      = {https://earthquake.usgs.gov/data/vs30},
 }
 
 @Misc{win2caps,
