[documentation] Update reference list

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -485,6 +485,15 @@ url  = {https://pubs.er.usgs.gov/publication/ofr75311},
 doi  = {10.3133/ofr75311 }
 }
 
+@misc{lehmann2017,
+  author    = {L. Lehmann},
+  title     = {{Performance test of phase pickers}},
+  institution = {{Institut f{\"u}r Geowissenschaften}},
+  type      = {Bachelor Thesis},
+  year      = {2017},
+  url       = {https://publishup.uni-potsdam.de/frontdoor/index/index/docId/40199},
+}
+
 @Article{minson-2008,
 author = {S.E. Minson and D.S. Dreger},
 title = {Stable inversions for complete moment tensors},
@@ -763,13 +772,13 @@ doi = {10.1016/0031-9201(96)03141-X}
 @Misc{caps2caps,
   Title                    = {{caps2caps}},
   HowPublished             = {gempa module},
-  Url                      = {https://docs.gempa.de/caps/current/apps/capstool.html#capstool},
+  Url                      = {https://docs.gempa.de/caps/current/apps/caps2caps.html},
 }
 
 @Misc{capstool,
   Title                    = {{capstool}},
   HowPublished             = {gempa plugin},
-  Url                      = {https://docs.gempa.de/caps/current/apps/caps2caps.html#caps2caps},
+  Url                      = {https://docs.gempa.de/caps/current/apps/capstool.html},
 }
 
 @Misc{cisn,
@@ -857,9 +866,15 @@ doi = {10.1016/0031-9201(96)03141-X}
 }
 
 @Misc{fdsn,
-  Title                    = {{FDSN}},
+  Title                    = {{FDSNWS}},
   HowPublished             = {International Federation of Digital Seismograph Networks},
   Url                      = {http://www.fdsn.org/webservices/},
+}
+
+@Misc{fdsn-datacenters,
+  Title                    = {{FDSN data centers}},
+  HowPublished             = {International Federation of Digital Seismograph Networks},
+  Url                      = {https://www.fdsn.org/webservices/datacenters/},
 }
 
 @Misc{fdsnws,
@@ -868,10 +883,16 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/fdsnws.html},
 }
 
+@Misc{fdsnws2ql,
+  Title                    = {{fdsnws2ql}},
+  HowPublished             = {gempa plugin},
+  Url                      = {https://docs.gempa.de/quakelink/current/apps/fdsnws2ql.html},
+}
+
 @Misc{fdsnws_scripts,
-  Title                    = {{fdsnws_scripts}},
-  HowPublished             = {SeisComP module},
-  Url                      = {https://www.SeisComP.de/SeisComP3/doc/applications/fdsnws_scripts.html},
+  Title                    = {{FDSNWS scripts}},
+  HowPublished             = {SeisComP},
+  Url                      = {https://www.seiscomp.de/seiscomp3/doc/applications/fdsnws_scripts.html},
 }
 
 @Misc{fdsnxml2inv,
@@ -994,14 +1015,20 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://www.iris.edu},
 }
 
+@Misc{iris-dmc,
+  Title                    = {{IRIS DMC}},
+  HowPublished             = {FDSNWS availability Web Service Documentation},
+  Url                      = {https://service.iris.edu/fdsnws/availability/1/},
+}
+
 @Misc{isc,
   Title                    = {{ISC}},
-  HowPublished             = {Seismicity record},
+  HowPublished             = {International Seismological Centre},
   Url                      = {http://www.isc.ac.uk/},
 }
 
 @Misc{iloc-iris,
-  Title                    = {{IRIS SeisCode}},
+  Title                    = {{iLoc SeisCode}},
   HowPublished             = {IRIS},
   Url                      = {https://seiscode.iris.washington.edu/projects/iloc},
 }
@@ -1214,6 +1241,11 @@ url = {http://www.ipgp.fr}
   Url = {https://www.interreg-caraibes.com}
 }
 
+@Misc{osm,
+  Title = {{OpenStreetMap}},
+  Url = {http://www.openstreetmap.org}
+}
+
 @Misc{playback_picks,
   Title                    = {{playback_picks}},
   HowPublished             = {gempa script},
@@ -1238,10 +1270,28 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/qclog/current/index.html},
 }
 
+@Misc{ql2ql,
+  Title                    = {{ql2ql}},
+  HowPublished             = {gempa plugin},
+  Url                      = {https://docs.gempa.de/quakelink/current/apps/ql2ql.html},
+}
+
 @Misc{ql2sc,
   Title                    = {{ql2sc}},
   HowPublished             = {SeisComP module},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/ql2sc.html},
+}
+
+@Misc{qltool,
+  Title                    = {{qltool}},
+  HowPublished             = {gempa module},
+  Url                      = {https://docs.gempa.de/quakelink/current/apps/qltool.html},
+}
+
+@Misc{qlpush,
+  Title                    = {{qlpush}},
+  HowPublished             = {gempa module},
+  Url                      = {https://docs.gempa.de/quakelink/current/apps/qlpush.html},
 }
 
 @Misc{quakelink,
@@ -1278,6 +1328,12 @@ url = {http://www.ipgp.fr}
   Title                    = {{rs2caps}},
   HowPublished             = {gempa plugin},
   Url                      = {https://docs.gempa.de/caps/current/apps/rs2caps.html#rs2caps},
+}
+
+@Misc{sc2ql,
+  Title                    = {{sc2ql}},
+  HowPublished             = {gempa module},
+  Url                      = {https://docs.gempa.de/quakelink/current/apps/sc2ql.html},
 }
 
 @Misc{scalert,
@@ -1419,7 +1475,7 @@ url = {http://www.ipgp.fr}
 }
 
 @Misc{scimex,
-  Title                    = {{schimex}},
+  Title                    = {{scimex}},
   HowPublished             = {SeisComP module},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/scimex.html},
 }
@@ -1431,7 +1487,7 @@ url = {http://www.ipgp.fr}
 }
 
 @Misc{scinv,
-  Title                    = {{schinv}},
+  Title                    = {{scinv}},
   HowPublished             = {SeisComP module},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/scinv.html},
 }
@@ -1721,10 +1777,22 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/caps/current/apps/test2caps.html#test2caps},
 }
 
+@Misc{tiles,
+  Title                    = {{Tiles}},
+  HowPublished             = {Wikipedia},
+  Url                      = {http://wiki.openstreetmap.org/wiki/Tiles},
+}
+
 @Misc{toast,
   Title                    = {{TOAST}},
   HowPublished             = {gempa module},
   Url                      = {https://docs.gempa.de/toast/current/index.html},
+}
+
+@Misc{uml,
+  Title                    = {{SeisComP UML diagram}},
+  HowPublished             = {GEOFON},
+  Url                      = {https://geofon.gfz-potsdam.de/_uml_new/},
 }
 
 @Misc{v4l2caps,
